[package]
name = "avp"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Simple multimedia player"
license = "MIT"
repository = "https://github.com/rust-av/avp"
readme = "README.md"
keywords = ["player","rust-av","sdl2"]

[dependencies]
clap = "2.24.1"
sdl2 = "0.34"
av-data = "0.3.0"
av-codec = "0.2.0"
av-format = "0.3.0"
libvpx = { rev = "dafb1e8", git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
libopus = { rev = "609b95a", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
matroska = { rev = "5457fca", git = "https://github.com/rust-av/matroska" }
av-vorbis = { rev = "8f5ec8c", git = "https://github.com/rust-av/av-vorbis" }
